# cripto_checker

./: README.md  pyproject.toml
src/: __init__.py  main.py  utils.py
tests/: test_get_difference.py  test_get_last_prices.py  test_get_percent_diff.py  test_is_valid_diff.py
